# js2scad

./: CMakeLists.txt  LICENSE  README.md
examples/: tyre.js
include/: js2scad.hxx
lib/: CMakeLists.txt  abstract_collection_object.cxx  abstract_collection_object.hxx  abstract_object.cxx  abstract_object.hxx  abstract_solid_object.cxx  abstract_solid_object.hxx  cube_js_class.cxx  cube_object.cxx  cube_object.hxx  cylinder_js_class.cxx  cylinder_object.cxx  cylinder_object.hxx  difference_js_class.cxx  difference_object.cxx  difference_object.hxx  include_js_function.cxx  intersection_js_class.cxx  intersection_object.cxx  intersection_object.hxx  mirror_js_method.cxx  objects_collection.cxx  objects_collection.hxx  polyhedron_js_class.cxx  polyhedron_object.cxx  polyhedron_object.hxx  resize_js_method.cxx  rotate_js_method.cxx  scale_js_method.cxx  sphere_js_class.cxx  sphere_object.cxx  sphere_object.hxx  translate_js_method.cxx  translator.cxx  translator_impl.cxx  translator_impl.hxx  union_js_class.cxx  union_object.cxx  union_object.hxx
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  js2scad_unit_test.cxx  translator_test.cxx.BAK  translator_test.hxx  translator_test_cube.cxx  translator_test_cylinder.cxx  translator_test_difference.cxx  translator_test_include_op.cxx  translator_test_intersection.cxx  translator_test_mirror_op.cxx  translator_test_polyhedron.cxx  translator_test_resize_op.cxx  translator_test_rotate_op.cxx  translator_test_scale_op.cxx  translator_test_sphere.cxx  translator_test_translate_op.cxx  translator_test_union.cxx
