include_directories (${CMAKE_SOURCE_DIR}/include ${SPIDERMONKEY_INCLUDE_DIRS})
file (GLOB SRC_LIST "*.cxx")
add_library (${JS2SCAD_LIBRARY_SHARED} SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(${JS2SCAD_LIBRARY_SHARED}
	PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})
target_link_libraries (${JS2SCAD_LIBRARY_SHARED} ${SPIDERMONKEY_LIBRARIES})
add_library (${JS2SCAD_LIBRARY_STATIC} STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${JS2SCAD_LIBRARY_STATIC}
	PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})
target_link_libraries (${JS2SCAD_LIBRARY_STATIC} ${SPIDERMONKEY_LIBRARIES})
